Updated hero image on mobile so that it's not ina fixed position.

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,10 @@ main {
 /* Media Queries */
 
 @media screen and (max-width: 769px) {
+    .hero {
+        background: linear-gradient(rgba(0,0,0,.9), rgba(0,0,0,0.1)), url(../images/sushi-hero.jpg) no-repeat center center; 
+    }
+    
     .jumbotron {
         margin-top: 175px;
         width: 90%
